--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ function changeBackground() {
 
 
 <BODY onload="changeBackground();">
-<i> This form populates data via FormCarry, into the following Google Sheet: https://docs.google.com/spreadsheets/d/1t8YQOowjGDmUWrSXIpCA0-O09NT5a3RHCyzSzWJQDEo/edit?usp=sharing </i>
-  
+<i> This form populates data via FormCarry, into the following Google Sheet: https://docs.google.com/spreadsheets/d/1xczJZetCg_WtB8gR0WwZoy9bg6QYRGQFTHgDmIK3V3g/edit#gid=0
 <br>
   
 <form action="https://formcarry.com/s/U2umhyiF4KKy" method="POST" accept-charset="UTF-8"     
