--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ function changeBackground() {
 
 
 <BODY onload="changeBackground();">
-<i> This form populates data via FormCarry, into the following Google Sheet: https:https://docs.google.com/spreadsheets/d/1xczJZetCg_WtB8gR0WwZoy9bg6QYRGQFTHgDmIK3V3g/edit#gid=0 </i>
+<i> This form populates data via FormCarry, into the following Google Sheet: https://docs.google.com/spreadsheets/d/1xczJZetCg_WtB8gR0WwZoy9bg6QYRGQFTHgDmIK3V3g/edit?usp=sharing </i>
   
 <br>
   
